--- a/Navigation.ipynb
+++ b/Navigation.ipynb
@@ -98,6 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%script false\n",
     "# reset the environment\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
     "\n",
@@ -134,6 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%script false\n",
     "env_info = env.reset(train_mode=False)[brain_name] # reset the environment\n",
     "state = env_info.vector_observations[0]            # get the current state\n",
     "score = 0                                          # initialize the score\n",
